<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTertiaryVerySoft"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textAllCaps="true"
        android:text="@string/textBtnLogin"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/titulo"
        android:textAllCaps="true"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <LinearLayout
        android:id="@+id/horizontalLayoutForm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_Reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Reg_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_Reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Reg_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontalLayoutLogin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayoutForm">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/textBtnLogin"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:icon="@drawable/ic_login"
            app:iconGravity="start"
            app:iconSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontalLayoutRegister"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayoutLogin">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/textNuevo"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/textView3"
            android:textSize="20sp"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/btnRegistrar"
            android:textStyle="bold"
            app:icon="@drawable/ic_save"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/textBtnRegistrar"
            android:textAllCaps="true"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>